# BLOOP

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirementsDev.txt
.github/workflows/: docker-image.yml  pipInstall.yml
Mathematica/: MathematicaToPythonHelper.m  Z2_3HDM_DRalgo.wl
Run/: ExampleConfigFile.json  ProfileCode.sh  Z2_3HDMConfigFile.json
Share/: .requirements.txt  ProfileCode.sh  RunStagesWrapper.sh  ScatterPlotAll.py  UnitAndIntegrationTests.sh
Share/DRalgoScripts/: DRalgoToBLOOPHelper.m  MathematicaToPythonHelper.m  Z2_3HDM_DRalgo.wl
Share/IntegrationTests/: Benchmarks
Share/IntegrationTests/NLO/ReferenceResult/: .ScanResults.json.swo  BM_0.json  BM_1.json  BM_2.json  BM_3.json  ScanResults.json  summary.txt
Share/IntegrationTests/NNLO/ReferenceResult/: BM_0.json  BM_1.json  BM_1_interp.json  BM_2.json  BM_3.json  ScanResults.json  summary.txt
Share/IntegrationTests/Pool/ReferenceResult/: BM_1.json
Share/IntegrationTests/Pool2/ReferenceResult/: BM_0.json  BM_1.json  BM_2.json  BM_3.json
Source/: AllTests.py  GenerateModules.py  LoopBenchmarks.py  MetaData.py  ParsedExpression.py  PlotData.py  ProcessMinimization.py  PyTestUnitTests.py  PythoniseMathematica.py  RunStages.py  SummariseResults.py  Tests.py  TrackVEV.py  UnitTests.py  UserInput.py  Z2_3HDMBmGenerator.py  Z2_ThreeHiggsBmGenerator.py  __init__.py  _test.py  runStages.py
Source/PostProcessing/: CompareStrengths.py  CountStrong.py  FullScatterPlot.py  ScatterCompare.py  ScatterCompareNEW.py  ScatterDeg.py  ScatterNormal.py
src/: UnitAndIntegrationTests.sh  UnitTests.py  profileCode.sh
src/Bloop/: CompileModules.py  EffectivePotential.py  GenerateModules.py  LoopBenchmarks.py  PDGData.py  PythoniseMathematica.py  TrackVEV.py  TransitionFinder.py  UserInput.py  Z2_ThreeHiggsBmGenerator.py
src/Bloop/Data/Z2_3HDM/ModelFiles/: EquationSymbols.json  LagranianSymbols.json  Veff_NLO.txt  allSymbols.json  scalarPermutationMatrix.txt  scalarRotationMatrix.json
src/IntegrationTests/: Benchmarks
src/IntegrationTests/Cython/ReferenceResult/: BM_1.json
src/IntegrationTests/NNLO/ReferenceResult/: BM_1.json  BM_1_interp.json
src/IntegrationTests/Pool/ReferenceResult/: BM_1.json
src/IntegrationTests/Pool2/ReferenceResult/: BM_0.json  BM_2.json  BM_3.json
src/Veff_generation/: generate_veff_module.py
