[build-system]
requires = ["setuptools>=45", "setuptools-scm", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "BLOOP"
dynamic = ["version"]
description = """BLOOP (Beyond one LOOp Phase transitions) is a python package to compute the critical temperature and strength of cosmological phase transitions using dimensional reduction via DRalgo"""
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Jasmine Thomson-Cooke", email = "jasmine@stp.dias"},
    {name = "Lucy Lweitt", email = "llewitt@cern.ch"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pdg",
    "nlopt",
    "numpy",
    "scipy",
    "ijson",
    "pathos",
    "sympy",
    "matplotlib",
    "Cython",
    "setuptools",
    "jinja2",
]
[project.urls]
Homepage = "https://github.com/JasmineTC/Bloop"

[project.scripts]
bloop = "Source.RunStages:main"

[tool.setuptools]
packages = ["Source"]
package-dir = {"Source" = "Source"}

[tool.setuptools.package-data]
Source = ["*.pyx", "*.pxd"]

[tool.setuptools_scm]
