[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "BLOOP"
description = """
BLOOP (Beyond one LOOp Phase transitions) is a python package to compute the
critical temperature and strength of cosmological phase transitions using
dimensional reduction techniques.
"""
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Jasmine Thomson-Cooke", email = "jasmine@stp.dias" },
    { name = "Lucy Lweitt",           email = "llewitt@cern.ch" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3"
]

dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/JasmineTC/Bloop"

[project.scripts]
bloop = "Source.RunStages:main"

[tool.setuptools]
packages = ["Source"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirementsDev.txt"] }

[tool.setuptools_scm]
write_to = ".version.py"

